removed text from GITHUBIO webpage

--- a/.mchp_private/doxygen_src/templates/mchpheader.html
+++ b/.mchp_private/doxygen_src/templates/mchpheader.html
@@ -51,13 +51,13 @@ $extrastylesheet
                 &nbsp;
             </td>
             <td style="width: 100px; color: white; font-size:14px; font-weight: bolder;">
-                Overview 
+                <!--Overview -->
             </td>
             <td style="width: 130px; color: white; font-size:14px; font-weight: bolder;"> 
-                Documentation 
+                <!--Documentation -->
             </td>
             <td style="width: 170px; color: white; font-size:14px; font-weight: bolder;"> 
-                Additional Resources 
+                <!--Additional Resources -->
             </td>
             <td style="width: auto; color: white; font-size:14px; font-weight: bolder;"> 
               &nbsp;
